--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
-body {
+body { 
+  
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0%
+}
+
+h1
+{text-align: center;}
+figure {display: block; margin-left: auto; margin-right: auto;}
+nav {text-align: center;}
+nav a {padding-left: 10px; padding-right: 10px; background-color: gray;}
+figcaption {font-size: small; text-align: center;}
+#featured-property p {width: 800px; text-align: center; margin-right:auto; margin-left: auto;}
+#details
+div { float: left; text-align: center; width: 25%; background-color: red;
+}
+
+
 }
